Rephrased paper outline into chapter outline. Still needs work.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.8 2009/07/28 09:51:26 ith Exp $
+% $Id: dbi-intro.tex,v 1.9 2009/07/28 10:13:51 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.8 2009/07/28 09:51:26 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.9 2009/07/28 10:13:51 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -55,7 +55,7 @@ along the throat. Since this is an open string mode, the field
 equation for the inflaton is determined by a Dirac-Born-Infeld (DBI) action. 
 
 
-The purpose of the present work is to 
+The purpose of Chapters \ref{ch:dbi-intro}, \ref{ch:dbi} and \ref{ch:multibrane} is to 
 explore the observational consequences of DBI inflation. 
 In general, primordial gravitational wave fluctuations
 and non-Gaussian statistics in the curvature perturbation provide 
@@ -120,17 +120,12 @@ by multiple coincident branes \cite{thomasward}.
 
 
 % TODO: Change to chapter structure.
-The paper is organized as follows. We briefly review DBI inflation 
-in Section \ref{sec:dbiinflation}. In Sections \ref{sec:upper-dbi} and  
-\ref{sec:lower-dbi}, we derive the respective 
-limits on the amplitude of the tensor perturbations.  
-We determine how the BM bound may be relaxed in generalized DBI models in 
-Section \ref{sec:relaxing-dbi} and discuss multi-brane 
-IR scenarios in Section \ref{sec:multiple-dbi}. Finally, we conclude  
-in Section \ref{Conclusion}.   
-Units are chosen such that $\Mpl \equiv (8\pi G )^{-1/2}= 2 
-.4 \times 10^{18}\, {\rm GeV}$ 
-defines the reduced Planck mass and $c=\hbar =1$. 
+In this chapter we introduce non-canonical inflation and DBI inflation.
+In Chapter \ref{ch:dbi} we derive upper and lower 
+limits on the amplitude of the tensor perturbations in Sections \ref{sec:upper-dbi} and  
+\ref{sec:lower-dbi} respectively.  
+We explore how these bounds may be relaxed in Chapter \ref{ch:multibrane} and discuss multi-brane 
+scenarios which permit observational tensor signals. 
 % 
 % 
 % 
