--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,8 +1,27 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.3 2009/07/14 14:05:11 ith Exp $
+% $Id: mainintro.tex,v 1.4 2009/07/28 10:14:07 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.3 2009/07/14 14:05:11 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.4 2009/07/28 10:14:07 ith Exp $}
+
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \chapter{Introduction}
 \label{ch:introduction}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+\section{Conventions}
+\label{sec:conventions}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+Units are chosen such that $\Mpl \equiv (8\pi G )^{-1/2}= 2 
+.4 \times 10^{18}\, {\rm GeV}$ 
+defines the reduced Planck mass and $c=\hbar =1$. 
