Added the todonotes package.

--- a/ihformat.sty
+++ b/ihformat.sty
@@ -1,7 +1,7 @@
 % % % % % % % % % % % % % 
 %  Ian Huston - ihformat.sty
 %  formatting and macros
-%  $Id: ihformat.sty,v 1.14 2009/07/22 10:38:29 ith Exp $
+%  $Id: ihformat.sty,v 1.15 2009/07/28 11:26:45 ith Exp $
 % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihformat}
@@ -19,13 +19,19 @@
 \def\version$#1,v #2 #3${} }%
 % \renewcommand{\version}[$#1,v #2 #3 #4$]{#2, #3}}%
 % Use the following line in each file to specify revision, date
-% \renewcommand{\CVSrevision}{\version$Id: ihformat.sty,v 1.14 2009/07/22 10:38:29 ith Exp $}
+% \renewcommand{\CVSrevision}{\version$Id: ihformat.sty,v 1.15 2009/07/28 11:26:45 ith Exp $}
 
 % Should we use showlabels? Set with labels option, default is off.
 \newboolean{@showlabels}
 \setboolean{@showlabels}{false}
 \DeclareOption{labels}{%
 \setboolean{@showlabels}{true} }%
+
+% Should we show todonotes? Set with todos option, default is off.
+\newboolean{@showtodos}
+\setboolean{@showtodos}{false}
+\DeclareOption{todos}{%
+\setboolean{@showtodos}{true} }%
 
 % Use hyperref?
 \newboolean{@usehyperref}
@@ -65,15 +71,19 @@
 \RequirePackage[numbers]{natbib}
 
 
-
 % My macros package
 \RequirePackage{ihmacros}
 
+
+% Todo notes package
+\ifthenelse{\boolean{@showtodos}}{\RequirePackage[textsize=small, backgroundcolor=white]{todonotes}}{\RequirePackage[disable]{todonotes}}
+\newcommand{\addtodo}[1]{\todo[inline]{TODO: #1}}
 % Hyperlinking without footnotes.
 \ifthenelse{\boolean{@usehyperref}}{\RequirePackage[pdftex,colorlinks,hyperfootnotes=false]{hyperref}}{}
 
 % Should we use showlabels?
 \ifthenelse{\boolean{@showlabels}}{\RequirePackage[inline]{showlabels}}{}
+
 % % % % % % % % % % 
 % fancyhdr settings
 % % % % % % % % % % 
