Changed to using \addtodo instead of comments.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.9 2009/07/28 10:13:51 ith Exp $
+% $Id: dbi-intro.tex,v 1.10 2009/07/28 11:45:30 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.9 2009/07/28 10:13:51 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.10 2009/07/28 11:45:30 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -94,7 +94,7 @@ we find in general that the tensor-scalar ratio must satisfy
 $r \, \lsim \, 10^{-7}$. This 
 is below the projected sensitivity of future Cosmic Microwave Background (CMB) polarization 
 experiments \cite{clover,vpj}. 
-% TODO: Change to WMAP5
+\addtodo{ Change to WMAP5}
 On the other hand, the WMAP3 data 
 favours a red perturbation spectrum with 
 $n_s<1$ when the tensor modes are negligible and 
@@ -119,7 +119,7 @@ proposed IR version of DBI inflation driven
 by multiple coincident branes \cite{thomasward}. 
 
 
-% TODO: Change to chapter structure.
+\addtodo{ Change to chapter structure.}
 In this chapter we introduce non-canonical inflation and DBI inflation.
 In Chapter \ref{ch:dbi} we derive upper and lower 
 limits on the amplitude of the tensor perturbations in Sections \ref{sec:upper-dbi} and  
@@ -139,7 +139,7 @@ scenarios which permit observational tensor signals.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-
+\addtodo{ More introduction of type IIB theory}
 Flux compactification of type IIB string theory to four dimensions 
 results in a warped geometry, where the six-dimensional CY  
 manifold contains one or more throats (see \cite{grana,douglas} for reviews). 
@@ -204,7 +204,7 @@ the field's interaction
 potential and $T(\varphi ) = T_3 h^4 (\varphi )$
 defines the warped brane tension. We refer to $P(\varphi , X)$ as the 
 `kinetic function' for the inflaton. 
- 
+
 
 We consider a spatially flat and isotropic cosmology 
 sourced by a homogeneous scalar field. 
@@ -247,7 +247,7 @@ Depending on the reheating
 temperature, this occurred some 30 to 60 e-foldings before the end of 
 inflation. The inflationary dynamics during this phase can  
 be quantified in terms of three parameters: 
-% TODO: Link to slow roll introduction
+\addtodo{ Link to slow roll introduction}
 % 
 \begin{eqnarray}
 \label{eq:epsdefn-dbiintro}
@@ -283,7 +283,7 @@ P_T^2 = \frac{2}{\pi^2} \frac{H^2}{\Mpl^2}
 respectively, where the quantities on the right-hand sides are evaluated 
 when the scale with comoving wavenumber $k=aH\gamma$ crossed 
 the Hubble radius during inflation.  
-% TODO: Talk about difference with standard k=aH
+\addtodo{ Talk about difference with standard k=aH}
 The tensor-scalar ratio, $r \equiv P_T^2/P_S^2$, is directly related to 
 the tensor spectral index by \cite{gm}
 % 
@@ -306,7 +306,7 @@ $n_s = 0.948^{+0.015}_{-0.018}$ for a prior of $r = 0$ \cite{spergel}.
 A further important consequence of a small sound speed is that departures  
 from purely Gaussian statistics may be large 
 \cite{brane6,brane11,lidser3,chenetal}. 
-% TODO: Reference introduction and fnl explanation
+\addtodo{Link to intro section on $\fnl$}
 It is conventional 
 to quantify such deviations by expressing the non-Gaussian curvature 
 perturbation ${\cal{R}}$ in the form 
@@ -325,7 +325,7 @@ is given to leading-order by \cite{chenetal,lidser2}
 f_{NL} = \frac{1}{3} \left( \frac{1}{c_s^2} -1 \right) \,.
 \end{equation}
 % 
-% TODO: Change to WMAP5 numbers
+\addtodo{ Change to WMAP5 numbers}
 Currently, WMAP3 constrains this parameter  
 to be ${| f_{NL} |} \, {\lsim} \, {300}$ \cite{spergel,crim}.  
 
@@ -344,7 +344,7 @@ where a subscript `$*$' denotes that the quantity is to be evaluated
 at that epoch. 
 
 
-% TODO: Change to chapter references
+\addtodo{ Change to chapter references}
 In the following, we first consider the UV version of DBI inflation,
 where the brane moves relativistically 
 towards the tip of the throat. We will assume implicitly 
@@ -362,7 +362,7 @@ the hot big bang model.
 % ========================================================= %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 % Intro from multibrane paper, fold back into dbi-intro chapter.
-% TODO: Put back into introduction above.
+\addtodo{ Put back into introduction above.}
 The quest to realise inflation within string/M-theory continues to 
 attract considerable attention. The Dirac-Born-Infeld (DBI) scenario 
 of the compactified type IIB theory is a well-motivated model, 
