--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.14 2009/07/28 09:51:26 ith Exp $
+% $Id: multibrane.tex,v 1.15 2009/07/28 11:45:30 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.14 2009/07/28 09:51:26 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.15 2009/07/28 11:45:30 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -41,7 +41,7 @@ if $n_s \sim 0.95$, as currently favoured by Cosmic Microwave Background
 (CMB) observations \cite{spergel,Komatsu:2008hk}. 
 
 
-% TODO: Move to extensions and alternatives chapter?
+\addtodo{ Move to extensions and alternatives chapter?}
 The purpose of the present paper is to investigate whether the 
 upper bounds on $r$ can be relaxed in more general DBI 
 inflationary scenarios. 
@@ -70,7 +70,7 @@ However
 the difficulty in these models is that the backreaction is no longer under control.
 
 
-% TODO: Any new papers?
+\addtodo{ Any new papers?}
 Alternative ways to relax these bounds have been proposed, including
 theories based upon multi-field models \cite{Huang:2007hh}, the addition of
 angular momentum as another degree of freedom \cite{spinflation} and using
@@ -81,7 +81,7 @@ regarded as being unsatisfactory since they require an extreme amount of fine tu
 to work.
 
 
-% TODO: Keep in multibrane intro
+\addtodo{ Keep in multibrane intro}
 Another alternative possibility is to consider 
 multiple brane configurations\footnote{In certain limits this approach 
 is actually dual to considering wrapped branes \cite{Ward:2007gs}.}. 
@@ -120,7 +120,7 @@ gravitational wave background if
 the number of coincident branes is sufficiently small. 
 
 
-% TODO: Put into main intro or earlier
+\addtodo{ Put into main intro or earlier}
 Units are chosen such that $\hbar = c =1$ and $\Mpl \equiv (8\pi G)^{-1/2}
 = 2.4 \times 10^{-18} \, {\rm GeV}$ denotes the 
 reduced Planck mass. 
@@ -132,7 +132,7 @@ reduced Planck mass.
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \section{Theoretic Upper Bounds on the Tensor-Scalar Ratio}
-% TODO: Rewrite as reference to previous chapter keeping labels intact
+\addtodo{ Rewrite as reference to previous chapter keeping labels intact}
 \label{sec:theobound-multi}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -197,7 +197,7 @@ c_s P_{,X} \right)_* \,.
 % 
 
 
-% TODO: Change to reference chapter not paper.
+\addtodo{ Change to reference chapter not paper.}
 Two of the authors (Lidsey \& Huston, LH) derived a complementary bound on the 
 tensor-scalar ratio by noting that during observable inflation
 the brane spans a fraction of the throat volume \cite{lidseyhuston}
@@ -244,7 +244,7 @@ the condition
 \left( \frac{h_*}{\Mpl} \right)^4 \,.
 \end{equation}
 % 
-% TODO: Change to cite chapter not paper
+\addtodo{ Change to cite chapter not paper}
 Finally substituting the constraint (\ref{eq:approxlyth-dbiintro}) 
 yields the upper limit \cite{lidseyhuston}
 % 
@@ -342,7 +342,7 @@ typically generated in models where the sound speed of fluctuations
 is small, we will begin by considering 
 scenarios where the kinetic function satisfies the 
 inequalities: 
-% TODO: Show working
+\addtodo{ Show working}
 % 
 \begin{equation}
 \label{eq:Plimits}
@@ -389,7 +389,7 @@ field and
 m \equiv \frac{2(\alpha -3 )}{\alpha -6} \, . 
 \end{equation}
 % 
-% TODO: Show working
+\addtodo{ Show working}
 It can be verified that the inequalities (\ref{eq:Plimits}) 
 are satisfied in the `relativistic' limit, where $X \simeq 1/f_2$.
 We consider the inflationary dynamics in this limit in what follows. 
@@ -1129,7 +1129,7 @@ $m \ne - 1/2$ arises in other string-inspired settings.
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \section*{Appendix: Exact Solution}
-% TODO: Move into main text
+\addtodo{ Move into main text}
 \label{sec:apx-multi}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
