--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.11 2009/07/28 09:51:26 ith Exp $
+% $Id: dbi.tex,v 1.12 2009/07/28 11:45:30 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.11 2009/07/28 09:51:26 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.12 2009/07/28 11:45:30 ith Exp $}
 % \input{paper1}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -32,7 +32,7 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 %
 
-% TODO: Add explanantion
+\addtodo{ Add explanantion}
 Recently, Baumann and McAllister (BM) \cite{bmpaper} 
 derived a field-theoretic upper bound on the tensor-scalar ratio 
 by noting that the four-dimensional Planck mass is related 
@@ -53,10 +53,10 @@ V_{6,\mathrm{throat}} = \mathrm{Vol}(X_5)
 and $\rho_{UV}$ denotes the radial coordinate at 
 the edge of the throat (defined as the region 
 where $h (\rho_{UV})$ is of order unity). 
-% TODO: Add figure with throat geometry
+\addtodo{ Add figure with throat geometry}
 If one assumes that the bulk volume is 
 non-negligible relative to 
-% TODO: add citation
+\addtodo{ add citation}
 that of the throat (i.e. $V_{6,\mathrm{throat}} < V_{6}$), 
 it follows that $\Mpl^2> V_{6,\mathrm{throat}}\kappa_{10}^{-2}$. 
 For a warped $AdS_5 \times X_5$ geometry, this leads to an 
@@ -102,11 +102,11 @@ how $r$ varies during the final stages of inflation.
 
 Typically, one expects $30 \, \lsim \, {{\cal{N}}_{\mathrm{eff}}} 
 \, \lsim \, 60$, 
-% TODO: Why?
+\addtodo{ Why?}
 although smaller values may be possible if the slow-roll conditions are 
-violated after observable scales have crossed the horizon. %TODO: Example
+violated after observable scales have crossed the horizon. \addtodo{ Example}
 Furthermore, $N \gg 1$ is necessary 
-for backreaction effects to be negligible. %TODO: Citation
+for backreaction effects to be negligible. \addtodo{ Citation}
  Hence, the constraint (\ref{eq:BMboundr}) 
 imposes a strong restriction on DBI inflationary models. 
 On the other hand, the numerical value 
@@ -120,7 +120,7 @@ can be expressed in terms of observable parameters.
 To proceed, we denote the change in the value of the inflaton field over 
 observable scales by 
 $\Delta  \varphi _{*} = \sqrt{T_3} \Delta \rho_{*}$. 
-% TODO: Add figure
+\addtodo{ Add figure}
 Since the brane moves towards the tip of the throat in 
 UV DBI inflation, it follows that $\rho_{*} > \rho_{end} >0$, which 
 implies that  
@@ -154,7 +154,7 @@ corresponds to a narrow range of inflaton values.
 To a first approximation, therefore, the fraction of the throat volume 
 (\ref{eq:throatvolume}) that is accessible to cosmological 
 observation can be estimated to be 
-% TODO: Show working
+\addtodo{ Show working}
 % 
 \begin{equation}
 \label{eq:trapezium}
@@ -174,7 +174,7 @@ then implies that
 and substituting the CMB normalization (\ref{eq:obswarp-dbiintro}) and 
 condition (\ref{eq:trapeziumlimit}) into the bound (\ref{eq:halfwayconstraint}) 
 yields the upper limit   
-% TODO: Show working
+\addtodo{ Show working}
 % 
 \begin{equation}
 \label{eq:boundpower6}
@@ -186,7 +186,7 @@ yields the upper limit
 Hence, employing the Lyth bound in the form $(\Delta \varphi_* / \Mpl )^2 \simeq 
 r (\Delta {\cal{N}}_*)^2 /8$  
 results in a very general upper limit on the tensor-scalar ratio: 
-% TODO: Show working
+\addtodo{ Show working}
 % 
 \begin{equation}
 \label{eq:generalbound}
@@ -200,7 +200,7 @@ Condition (\ref{eq:generalbound}) is
 only weakly dependent on the level of non-Gaussianity 
 when $f_{NL} > 5$ and we may therefore neglect the 
 factor involving this parameter. 
-% TODO: Change to WMAP5 numbers
+\addtodo{ Change to WMAP5 numbers}
 Substituting the WMAP3 normalization 
 $P_S^2 = 2.5 \times 10^{-9}$ then implies that
 %  
@@ -224,7 +224,7 @@ r_* < 10^{-7} \,.
 % 
 This is significantly below the sensitivity 
 of future CMB polarization experiments, which will measure 
-${r} \, {\gsim} \, 10^{-4}$ \cite{clover,vpj}. %TODO: Update refs (clover now longer funded)
+${r} \, {\gsim} \, 10^{-4}$ \cite{clover,vpj}. \addtodo{ Update refs (clover now longer funded)}
 If CMB  
 observations are able to span the full range of e-foldings such that
 $\Delta {\cal{N}}_* \simeq 4$, this constraint is strengthened to 
@@ -286,7 +286,7 @@ indicates that standard versions of UV DBI inflation generate a
 tensor spectrum that is unobservably 
 small. Hence, $r=0$ can be assumed as a prior 
 when discussing the WMAP3 data. 
-% TODO: Check WMAP5 has the same numbers
+\addtodo{ Check WMAP5 has the same numbers}
 However, in this case the data 
 excludes a scale-invariant density spectrum at the $3 \sigma$ level
 when the running in the spectral index, $\alpha_s \equiv dn_s/d\ln k$, 
@@ -305,7 +305,7 @@ In general, the spectral index may be related to the tensor-scalar ratio.
 After differentiating Eq. (\ref{eq:csdefn-dbiintro}) 
 with respect to cosmic time, and employing Eqs. (\ref{useful}) 
 and (\ref{indices}), we find that 
-% TODO: Show working
+\addtodo{ Show working}
 % 
 \begin{equation}
 \label{eq:nsconstraint}
@@ -322,7 +322,7 @@ $n_{NL} \equiv d \ln f_{NL}/d\ln k$ \cite{brane14}.
 This implies that $s= - 3 f_{NL} n_{NL} /[2(1+3f_{NL})]$ and     
 substitution of Eqs. (\ref{indices})--(\ref{eq:fnlcs-dbiintro}) 
 into Eq. (\ref{eq:nsconstraint}) then yields
-% TODO: Show working  
+\addtodo{ Show working  }
 % 
 \begin{equation}
 \label{eq:obscon1}
@@ -338,7 +338,7 @@ constant value. In this regime, Eq. (\ref{eq:obscon1}) reduces to
 the condition $r \simeq 2.3 (1-n_s)/\sqrt{f_{NL}}$ when $f_{NL}$ is 
 sufficiently large to be detectable by Planck, 
 i.e., $|f_{NL}| > 5$. 
-% TODO: Change to WMAP5 numbers
+\addtodo{ Change to WMAP5 numbers}
 It then follows from the  
 WMAP3 best-fit value $n_s \simeq 0.987$ and upper limit 
 $|f_{NL}| < 300$ \cite{crim} that the gravitational wave amplitude 
@@ -372,7 +372,7 @@ inflation in terms of observable parameters and it
 may be combined with the upper bound 
 (\ref{eq:generalbound}) to confront the scenario with observations.
 Firstly, let us assume that the tensor-scalar ratio is negligible. 
-% TODO: Change to WMAP5 numbers
+\addtodo{ Change to WMAP5 numbers}
 The WMAP3 data implies that $1-n_s > 0.037$, and this is only 
 compatible with condition (\ref{eq:halfbound}) if 
 % 
@@ -394,20 +394,20 @@ The magnitude of the second term in condition (\ref{eq:halfbound})
 is suppressed by a factor of $f_{NL}^{3/2} \gg 1$ 
 relative to the first. This is expected to 
 be a significant effect in DBI inflation. 
-% TODO: Change to WMAP5 numbers
+\addtodo{ Change to WMAP5 numbers}
 Consequently, 
 by saturating the WMAP3 limit $|f_{NL}| < 300$ \cite{crim}, we arrive at 
 a lower bound on the tensor-scalar ratio which applies   
 to any model for which the ratio $(n_{NL}/f_{NL})$ is 
 negligible:
-% TODO: Add working
+\addtodo{ Add working}
 % 
 \begin{equation}
 \label{eq:lowerbound}
 r_* >  \frac{4(1-n_s)}{\sqrt{3f_{NL}}} > \frac{1-n_s}{8} \,.
 \end{equation}
 % 
-% TODO: Change to WMAP5 numbers
+\addtodo{ Change to WMAP5 numbers}
 This requires $r > 0.002$ for the WMAP3 best-fit value 
 $1-n_s \simeq 0.013$, which is incompatible with the upper limit 
 (\ref{eq:standardbound}). 
@@ -438,7 +438,7 @@ In particular, combining the limits
 and we find that $\mathrm{Vol}(X_5) \, \lsim \, 10^{-7}$ 
 for typical values $1-n_s \simeq 0.05$ and 
 $\Delta {\cal{N}}_* \simeq 4$. 
-% TODO: Any updates on this?
+\addtodo{ Any updates on this?}
 This 
 is comparable to the limit on the volume derived for the special case of a 
 quadratic inflaton potential \cite{bmpaper}.  
@@ -522,7 +522,7 @@ c_s = \sqrt{1-f_2 X} = \frac{f_1f_2}{2} \frac{1}{P_{,X}}  \,,
 \end{equation}
 % 
 and the scalar perturbation amplitude by
-% TODO: Change to standard spectrum definition 
+\addtodo{ Change to standard spectrum definition }
 % 
 \begin{equation}
 \label{eq:spectrum-dbi}
@@ -675,7 +675,7 @@ next Section.
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \section{IR Inflation and Multiple Branes}
-% TODO: Move to later chapter?
+\addtodo{ Move to later chapter?}
 \label{sec:multiple-dbi}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -742,7 +742,7 @@ an $AdS_5$ or KS throat, respectively. Recall that the warp
 factor for the $AdS_5$ throat is given by $h=\varphi/(\sqrt{T_3}L)$.  
 Condition (\ref{eq:warptorelax}) therefore reduces to a constraint on the 
 value of the inflation during observable inflation: 
-% TODO: Show working
+\addtodo{ Show working}
 % 
 \begin{equation}
 \label{eq:phivalue-dbi}
@@ -758,7 +758,7 @@ h_{\rm cut} \lambda^{1/4} m_s$, where $h_{\rm cut}$ is the value of the
 warp factor at that scale. For consistency, therefore, one requires 
 $\varphi_*>\varphi_{\rm cut}$, which implies an upper limit on the 
 ${\rm D3}$-brane charge: 
-% TODO: Show working
+\addtodo{ Show working}
 % 
 \begin{equation}
 \label{eq:Nlimit-dbi}
@@ -879,7 +879,7 @@ constraint is given by \cite{gkp}
 where $\chi$ is the Euler characteristic of the four-fold.  
 Hence, $N = MK < \chi /24$ and together with condition 
 (\ref{eq:Nconstraint-dbi}), this implies that
-% TODO: Still true?
+\addtodo{ Still true?}
 % 
 \begin{equation}
 \label{eq:chilimit}
@@ -906,7 +906,7 @@ incompatible with the generalized BM bound.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 \section{Conclusion} 
-% TODO: Expand and rewrite
+\addtodo{ Expand and rewrite}
 \label{sec:conclusion-dbi}
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -926,7 +926,7 @@ We find that the standard UV
 scenario predicts tensor perturbations that are undetectably small, 
 at a level ${r_*} \, {\lsim} \, {10^{-7}}$. 
 
-% TODO: Change to WMAP5
+\addtodo{ Change to WMAP5}
 The current WMAP3 data 
 favours models that generate a red spectral index $n_s<1$
 when both the gravitational waves and running in the scalar 
@@ -948,7 +948,7 @@ theory with observation. In general,
 either the upper or lower limit on $r$ needs to be relaxed. 
 Weakening the latter would require a violation of the slow-roll 
 conditions or a blue spectral index. 
-% TODO: Change to WMAP5
+\addtodo{ Change to WMAP5}
 A value of $n_s >1$ is compatible with WMAP3 if the running of the 
 spectral index 
 is sufficiently negative, but is only marginally
@@ -1003,7 +1003,7 @@ check that any given model must satisfy
 irrespective of the form of the inflaton potential. 
 
 
-% TODO: Rewrite in terms of thesis
+\addtodo{ Rewrite in terms of thesis}
 In conclusion, therefore, primordial gravitational wave constraints 
 combined with cosmological observations of the density perturbation
 spectrum act as a powerful discriminant of DBI inflationary models. 
