--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.12 2009/07/28 11:45:30 ith Exp $
+% $Id: dbi.tex,v 1.13 2009/07/28 16:28:39 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.12 2009/07/28 11:45:30 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.13 2009/07/28 16:28:39 ith Exp $}
 % \input{paper1}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -73,7 +73,7 @@ the throat region:
 Condition (\ref{eq:BMbound-dbi}) may be converted into a 
 corresponding limit on the tensor-scalar ratio by noting from 
 the definition (\ref{eq:epsdefn-dbiintro})
-that $\dot{\varphi}^2 /\Mpl^2 = 2\epsilon H^2/P_{,X}$.
+that $\dot{\varphi}^2 /\Mpl^2 = 2\epsilon_H H^2/P_{,X}$.
 This implies that the variation of the inflaton field 
 is given by the Lyth bound 
 \cite{lyth,bmpaper}
@@ -309,7 +309,7 @@ and (\ref{indices}), we find that
 % 
 \begin{equation}
 \label{eq:nsconstraint}
-1-n_s = 4 \epsilon +\frac{2s}{1-\gamma^2} \mp 
+1-n_s = 4 \epsilon_H +\frac{2s}{1-\gamma^2} \mp 
 \frac{2\Mpl^2}{\gamma} \frac{T'|H'|}{TH}  \,,
 \end{equation}
 % 
