--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.15 2009/07/28 11:45:30 ith Exp $
+% $Id: multibrane.tex,v 1.16 2009/07/28 16:28:39 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.15 2009/07/28 11:45:30 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.16 2009/07/28 16:28:39 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -1015,7 +1015,7 @@ In general, it is difficult to quantify
 the magnitude of $\mathcal{N}_{\mathrm{eff}}$ without 
 imposing further restrictions on the parameters of the models 
 and, in particular, on the functional form of the inflaton potential. 
-However, if the ratio $\epsilon/P_{,X}$ remains approximately 
+However, if the ratio $\epsilon_H/P_{,X}$ remains approximately 
 constant during the final stages of inflation, one would anticipate that 
 ${\cal{N}}_{\rm eff} \lsim 60$. Nevertheless, if $N \ll 75852$, the bound 
 (\ref{eq:LHstrongerads}) will only be violated for $n \le 3$ if 
