--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.11 2009/07/28 16:28:37 ith Exp $
+% $Id: dbi-intro.tex,v 1.12 2009/07/28 17:09:30 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.11 2009/07/28 16:28:37 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.12 2009/07/28 17:09:30 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -128,6 +128,114 @@ We explore how these bounds may be relaxed in Chapter \ref{ch:multibrane} and di
 scenarios which permit observational tensor signals. 
 % 
 % 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+\section{Non-Canonical Inflation} 
+\label{sec:noncanoninfl}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+
+
+The low-energy, world-volume dynamics of a 
+${\rm D3}$-brane in a warped background is determined 
+by an effective action of the form 
+% 
+\begin{equation}
+\label{eq:DBIaction-dbiintro2}
+S=\int  d^4x \sqrt{|g|} \left[ \frac{\Mpl^2}{2} R 
++ P (\varphi , X) \right] \,,
+\end{equation}
+% 
+where $R$ is the Ricci curvature scalar, 
+$X \equiv -\frac{1}{2}g^{\mu \nu}\nabla_\mu \varphi \nabla_\nu \varphi$
+denotes the kinetic energy of the inflaton field $\varphi$, and the function  
+$P (\varphi , X)$ is referred to as the `kinetic function'.  
+
+
+We assume that the four-dimensional universe is   
+spatially flat and isotropic and sourced by an  
+homogeneous inflaton field, $\varphi =\varphi (t)$, with energy 
+density $E = 2X\PX - P$, where a subscripted comma denotes partial
+differentiation. 
+We further assume that the inflaton dynamics  
+generates a quasi-exponential expansion of the universe, 
+where $\epsilon_H \equiv -\dot{H}/H^2 \ll1$. 
+
+ 
+It proves convenient to define two parameters in terms of the 
+kinetic  function $P$ and its derivatives \cite{lidser1,lidser3}: 
+% 
+\begin{eqnarray}
+\label{eq:defcs-dbiintro}
+ c_s^2 \equiv \frac{\PX}{\PX + 2X P_{,XX}} \,,
+\\
+\label{eq:deflambda-dbiintro}
+\Lambda \equiv  \frac{X^2 P_{,XX} +
+\frac{2}{3}X^3 P_{,XXX}}{X P_{,X} +
+2X^2 P_{,XX}}\,.
+\end{eqnarray}
+% 
+The first parameter, $c_s$, determines the sound speed of fluctuations 
+in the inflaton field. This can be significantly less than unity, 
+in contrast to slow-roll inflation driven by a canonical 
+field such that $P_{,X} =1$.
+
+
+The amplitudes of the scalar and tensor perturbations 
+generated during inflation are given by \cite{gm}
+% 
+\begin{eqnarray} 
+\label{eq:Ps-dbiintro}
+ \Ps = \frac{H^4}{8\pi^2 X}\frac{1}{c_s \PX} \,,
+\\
+\label{eq:Pt-dbiintro}
+\Pt = \frac{2}{\pi^2} \frac{H^2}{\Mpl^2} \,,
+\end{eqnarray}
+% 
+respectively, and the ratio of these amplitudes 
+is defined as \cite{gm} 
+% 
+\begin{equation}
+\label{eq:rdefn-dbiintro}
+r\equiv \frac{\Pt}{\Ps} = 16c_s \epsilon_H \,.
+\end{equation}
+%   
+The WMAP3 normalization of the CMB power spectrum 
+implies that $\Ps= 2.5\times10^{-9}$ and 
+the experimental upper bound on the tensor-scalar 
+ratio is $r <0.55$ \cite{spergel}.
+
+
+Deviations from Gaussian statistics in the curvature perturbation, ${\cal{R}}$,
+are parametrized in terms of the non-linearity parameter, 
+$\fnl$, which is defined by ${\cal{R}} = {\cal{R}}_G + \frac{3}{5} \fnl  (
+{\cal{R}}_G^2 -\langle {\cal{R}}_G^2 \rangle )$, where the 
+quadratic component represents a convolution and 
+${\cal{R}}_G$ denotes the Gaussian contribution \cite{maldacena}. In the limit  
+where the three momenta have equal magnitude (corresponding to the equilateral  
+triangle limit), the leading-order contribution to the non-linearity 
+parameter is given by \cite{chenetal,lidser3}
+% 
+\begin{equation} 
+\label{eq:fnldefn-dbiintro}
+ \fnl = -\frac{35}{108}\left(\frac{1}{c_s^2} -1 \right) +
+\frac{5}{81}\left( \frac{1}{c_s^2} -1 -2\Lambda \right) \,.
+\end{equation}
+%  
+One should note that the sign convention is that employed
+by the WMAP data set.
+Data from WMAP3 imposes the bound $|\fnl| < 300$ on this parameter
+\cite{spergel}. The corresponding bounds for other triangle configurations 
+may be much tighter than this and this may be particularly relevant if 
+non-Gaussian signatures have indeed been detected in the 
+CMB \cite{Yadav:2007yy,crim}. The more recent WMAP5 data set
+\cite{Komatsu:2008hk} improves on this bound somewhat, and
+also indicates that it is distinctly asymmetric. At the $95 \%$ confidence level, the bound on the 
+equilateral triangle becomes $-151 < \fnl < 253$.
+
+
 % 
 % 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -213,10 +321,10 @@ varying inflaton can be expressed in the form \cite{brane6}
 % 
 \begin{eqnarray}
 \label{eq:Friedmann-dbiintro}
-3 \Mpl^2 H^2(\varphi ) = V(\varphi ) -T(\varphi ) 
-\left[ 1- \sqrt{1+4\Mpl^4T^{-1} H'^2} \right] \\
+3 \Mpl^2 H^2(\varphi ) &=& V(\varphi ) -T(\varphi ) 
+\left[ 1- \sqrt{1+4\Mpl^4T^{-1} H'^2} \right] \,,\\
 \label{useful}
-\dot{\varphi} = - \frac{2\Mpl^2H'}{\sqrt{1+4\Mpl^4 T^{-1} H'^2}} \, ,
+\dot{\varphi} &=& - \frac{2\Mpl^2H'}{\sqrt{1+4\Mpl^4 T^{-1} H'^2}} \, ,
 \end{eqnarray}
 % 
 where $H=H(\varphi )$ represents the Hubble parameter
@@ -245,18 +353,22 @@ We now define the epoch that is directly
 accessible to cosmological observations as `observable inflation'. 
 Depending on the reheating 
 temperature, this occurred some 30 to 60 e-foldings before the end of 
-inflation. The inflationary dynamics during this phase can  
-be quantified in terms of three parameters: 
-\addtodo{ Link to slow roll introduction}
+inflation. We will assume that the slow roll conditions described in 
+Section~\ref{sec:slowroll-intro} apply during observable inflation.
+The definitions of the slow roll parameters described in that section 
+change when $c_s$ is not unity and we
+will include a third parameter $s$ which quantifies the rate of change of $c_s$.
+The inflationary dynamics during this phase can  
+be quantified in terms of these three parameters: 
 % 
 \begin{eqnarray}
 \label{eq:epsdefn-dbiintro}
 \epsilon_H \equiv -\frac{\dot{H}}{H^2}
 = \frac{XP_{,X}}{\Mpl^2H^2} 
 = \frac{2\Mpl^2}{\gamma} \left( \frac{H'}{H} \right)^2 \\
-\label{defeta}
+\label{eq:defeta-dbiintro}
 \eta_H \equiv  \frac{2\Mpl^2}{\gamma}\frac{H''}{H} \\
-\label{defs}
+\label{eq:defs-dbiintro}
 s \equiv \frac{\dot{c_s}}{c_sH} 
 = \frac{2\Mpl^2}{\gamma} \frac{H'}{H}\frac{\gamma'}{\gamma}  \,,
 \end{eqnarray}
@@ -383,113 +495,15 @@ brane tension. The regime where this bound is nearly saturated is
 known as the `relativistic' limit.
 
 
+
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\section{Non-Canonical Inflation} 
-\label{sec:noncanoninfl}
+\section{The Lyth bound}
+\label{sec:lyth-dbiintro}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-
-
-The low-energy, world-volume dynamics of a 
-${\rm D3}$-brane in a warped background is determined 
-by an effective action of the form 
-% 
-\begin{equation}
-\label{eq:DBIaction-dbiintro2}
-S=\int  d^4x \sqrt{|g|} \left[ \frac{\Mpl^2}{2} R 
-+ P (\varphi , X) \right] \,,
-\end{equation}
-% 
-where $R$ is the Ricci curvature scalar, 
-$X \equiv -\frac{1}{2}g^{\mu \nu}\nabla_\mu \varphi \nabla_\nu \varphi$
-denotes the kinetic energy of the inflaton field $\varphi$, and the function  
-$P (\varphi , X)$ is referred to as the `kinetic function'.  
-
-
-We assume that the four-dimensional universe is   
-spatially flat and isotropic and sourced by an  
-homogeneous inflaton field, $\varphi =\varphi (t)$, with energy 
-density $E = 2X\PX - P$, where a subscripted comma denotes partial
-differentiation. 
-We further assume that the inflaton dynamics  
-generates a quasi-exponential expansion of the universe, 
-where $\epsilon_H \equiv -\dot{H}/H^2 \ll1$. 
-
- 
-It proves convenient to define two parameters in terms of the 
-kinetic  function $P$ and its derivatives \cite{lidser1,lidser3}: 
-% 
-\begin{eqnarray}
-\label{eq:defcs-dbiintro}
- c_s^2 \equiv \frac{\PX}{\PX + 2X P_{,XX}} \,,
-\\
-\label{eq:deflambda-dbiintro}
-\Lambda \equiv  \frac{X^2 P_{,XX} +
-\frac{2}{3}X^3 P_{,XXX}}{X P_{,X} +
-2X^2 P_{,XX}}\,.
-\end{eqnarray}
-% 
-The first parameter, $c_s$, determines the sound speed of fluctuations 
-in the inflaton field. This can be significantly less than unity, 
-in contrast to slow-roll inflation driven by a canonical 
-field such that $P_{,X} =1$.
-
-
-The amplitudes of the scalar and tensor perturbations 
-generated during inflation are given by \cite{gm}
-% 
-\begin{eqnarray} 
-\label{eq:Ps-dbiintro}
- \Ps = \frac{H^4}{8\pi^2 X}\frac{1}{c_s \PX} \,,
-\\
-\label{eq:Pt-dbiintro}
-\Pt = \frac{2}{\pi^2} \frac{H^2}{\Mpl^2} \,,
-\end{eqnarray}
-% 
-respectively, and the ratio of these amplitudes 
-is defined as \cite{gm} 
-% 
-\begin{equation}
-\label{eq:rdefn-dbiintro}
-r\equiv \frac{\Pt}{\Ps} = 16c_s \epsilon_H \,.
-\end{equation}
-%   
-The WMAP3 normalization of the CMB power spectrum 
-implies that $\Ps= 2.5\times10^{-9}$ and 
-the experimental upper bound on the tensor-scalar 
-ratio is $r <0.55$ \cite{spergel}.
-
-
-Deviations from Gaussian statistics in the curvature perturbation, ${\cal{R}}$,
-are parametrized in terms of the non-linearity parameter, 
-$\fnl$, which is defined by ${\cal{R}} = {\cal{R}}_G + \frac{3}{5} \fnl  (
-{\cal{R}}_G^2 -\langle {\cal{R}}_G^2 \rangle )$, where the 
-quadratic component represents a convolution and 
-${\cal{R}}_G$ denotes the Gaussian contribution \cite{maldacena}. In the limit  
-where the three momenta have equal magnitude (corresponding to the equilateral  
-triangle limit), the leading-order contribution to the non-linearity 
-parameter is given by \cite{chenetal,lidser3}
-% 
-\begin{equation} 
-\label{eq:fnldefn-dbiintro}
- \fnl = -\frac{35}{108}\left(\frac{1}{c_s^2} -1 \right) +
-\frac{5}{81}\left( \frac{1}{c_s^2} -1 -2\Lambda \right) \,.
-\end{equation}
-%  
-One should note that the sign convention is that employed
-by the WMAP data set.
-Data from WMAP3 imposes the bound $|\fnl| < 300$ on this parameter
-\cite{spergel}. The corresponding bounds for other triangle configurations 
-may be much tighter than this and this may be particularly relevant if 
-non-Gaussian signatures have indeed been detected in the 
-CMB \cite{Yadav:2007yy,crim}. The more recent WMAP5 data set
-\cite{Komatsu:2008hk} improves on this bound somewhat, and
-also indicates that it is distinctly asymmetric. At the $95 \%$ confidence level, the bound on the 
-equilateral triangle becomes $-151 < \fnl < 253$.
-
 
 Eqs. (\ref{eq:Ps-dbiintro}) and (\ref{eq:Pt-dbiintro}) imply 
 that the variation of the inflaton field during inflation  
