Move around some sections and add some todos.

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.13 2009/07/28 16:28:39 ith Exp $
+% $Id: dbi.tex,v 1.14 2009/07/28 20:26:19 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.13 2009/07/28 16:28:39 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.14 2009/07/28 20:26:19 ith Exp $}
 % \input{paper1}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -17,7 +17,47 @@
 % 
 % 
 % 
-%  TODO: Add chapter introduction
+\addtodo{Expand chapter introduction}
+
+The gravitational wave background generated in DBI 
+inflation was recently investigated by Baumann and McAllister (BM) 
+\cite{bmpaper}. By exploiting a relationship due originally 
+to Lyth \cite{lyth}, these authors derived a field-theoretic upper limit 
+to the tensor amplitude and concluded that 
+rather stringent conditions would need to be satisfied for these 
+perturbations to be detectable.      
+Moreover, the special case of 
+DBI inflation driven by a quadratic potential is incompatible with the WMAP3 
+data when this constraint is imposed \cite{bean}.  
+
+
+Our aim is to derive observational constraints on DBI inflation that are 
+insensitive to the details of the throat geometry and the inflaton potential. 
+In general, there are two realizations of the scenario, 
+which are referred to as the ultra-violet (UV) and infra-red (IR) 
+versions, respectively. These are characterized by whether the brane is 
+moving towards or away from the tip of the throat. 
+We focus initially on the UV scenario 
+and derive an upper bound on 
+the gravitational wave amplitude in terms of observable 
+parameters. This limit arises by considering 
+the variation of the inflaton field during the era when 
+observable scales cross the Hubble radius, and 
+we find in general that the tensor-scalar ratio must satisfy 
+$r \, \lsim \, 10^{-7}$. This 
+is below the projected sensitivity of future Cosmic Microwave Background (CMB) polarization 
+experiments \cite{clover,vpj}. 
+\addtodo{ Change to WMAP5}
+On the other hand, the WMAP3 data 
+favours a red perturbation spectrum with 
+$n_s<1$ when the tensor modes are negligible and 
+the scalar spectral index is effectively constant \cite{spergel}. 
+For models which generate such a spectrum, 
+we identify a corresponding lower limit on the 
+tensor modes such that $r \, \gsim \, 0.1 (1-n_s)$. 
+This is incompatible with the upper bound 
+on $r$ when $1-n_s \simeq 0.05$, as inferred
+by the observations. 
 
 % 
 % 
