--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.16 2009/07/28 16:28:39 ith Exp $
+% $Id: multibrane.tex,v 1.17 2009/07/28 20:26:19 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.16 2009/07/28 16:28:39 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.17 2009/07/28 20:26:19 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -138,6 +138,7 @@ reduced Planck mass.
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
+\addtodo{Refer to dbi-intro chapter and defns there.}
 The ten-dimensional metric of the warped deformed conifold inside a  
 throat region has the form
 %  
