--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.18 2009/07/22 10:38:44 ith Exp $
+% $Id: thesis.tex,v 1.19 2009/07/28 20:26:39 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
 %twoside,
@@ -18,13 +18,14 @@ onehalfspacing % onehalfspacing or doublespacing
 % My formatting package
 % CVSon for cvs revision number in footers
 % CVSoff is default
-\usepackage[CVSon, 
-            labels,
-            hyperref
+\usepackage[CVSon, % CVS version in footers
+            labels, % show labels
+	    todos, % show todos
+            hyperref % Use hyperref for links
             ]{ihformat}
 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.18 2009/07/22 10:38:44 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.19 2009/07/28 20:26:39 ith Exp $}
 % \usepackage[inline]{showlabels}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
@@ -103,8 +104,8 @@ dbi/multibrane,
 \begin{singlespace}
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Bibliography
-% \bibliography{../central-store}
-% \bibliographystyle{thesis}
+\bibliography{../central-store}
+\bibliographystyle{thesis}
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % 
