Fixed up some comments and equation references.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.13 2009/07/28 20:26:19 ith Exp $
+% $Id: dbi-intro.tex,v 1.14 2009/07/29 10:33:54 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.13 2009/07/28 20:26:19 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.14 2009/07/29 10:33:54 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -57,7 +57,7 @@ equation for the inflaton is determined by a Dirac-Born-Infeld (DBI) action.
 % ========================================================= %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 % Intro from multibrane paper, fold back into dbi-intro chapter.
-\addtodo{ Put back into introduction above.}
+\addtodo{ Put next section back into introduction above.}
 The quest to realise inflation within string/M-theory continues to 
 attract considerable attention. The Dirac-Born-Infeld (DBI) scenario 
 of the compactified type IIB theory is a well-motivated model, 
@@ -90,16 +90,7 @@ signal in the density perturbations \cite{brane6,brane11,lidser3,chenetal}.
 
 
 
-Hence, a reconciliation between theory and observation 
-requires either a relaxation of the upper limit on $r$ or a blue 
-spectral index $(n_s >1)$. The DBI scenario would need 
-to be generalized in a suitable way for the upper bound on $r$
-to be weakened. We identify necessary conditions that a 
-generalized action must satisfy for the Baumann-McAllister
- constraint to be relaxed. 
-We then show that such conditions can be realized in a recently 
-proposed IR version of DBI inflation driven
-by multiple coincident branes \cite{thomasward}. 
+
 
 
 \addtodo{ Change to chapter structure.}
@@ -380,7 +371,8 @@ P_T^2 = \frac{2}{\pi^2} \frac{H^2}{\Mpl^2}
 respectively, where the quantities on the right-hand sides are evaluated 
 when the scale with comoving wavenumber $k=aH\gamma$ crossed 
 the Hubble radius during inflation.  
-\addtodo{ Talk about difference with standard k=aH}
+\addtodo{ Talk about difference with standard k=aH and compare consistency relation with 
+standard one.}
 The tensor-scalar ratio, $r \equiv P_T^2/P_S^2$, is directly related to 
 the tensor spectral index by \cite{gm}
 % 
@@ -388,10 +380,11 @@ the tensor spectral index by \cite{gm}
 \label{eq:consistency-dbiintro}
 r= -8c_sn_t = 16c_s \epsilon_H\,.
 \end{equation}
-% 
+%
 Hence, a sound speed different to unity leads to a violation of the 
 standard inflationary consistency equation, which might be 
 detectable in the foreseeable future \cite{lidser1,lidser2}. 
+\addtodo{WMAP5}
 Recent observations of the CMB 
 indicate that $P^2_S=2.5 \times 10^{-9}$ and $r < 0.55$ \cite{spergel}. 
 The best-fit value for a constant spectral index is 
@@ -403,7 +396,8 @@ $n_s = 0.948^{+0.015}_{-0.018}$ for a prior of $r = 0$ \cite{spergel}.
 A further important consequence of a small sound speed is that departures  
 from purely Gaussian statistics may be large 
 \cite{brane6,brane11,lidser3,chenetal}. 
-\addtodo{Link to intro section on $\fnl$}
+\addtodo{Link to intro section on $\fnl$. Add note about using equilateral in
+next two chapters.}
 It is conventional 
 to quantify such deviations by expressing the non-Gaussian curvature 
 perturbation ${\cal{R}}$ in the form 
