--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.17 2009/07/28 20:26:19 ith Exp $
+% $Id: multibrane.tex,v 1.18 2009/07/29 10:33:54 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.17 2009/07/28 20:26:19 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.18 2009/07/29 10:33:54 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -132,7 +132,6 @@ reduced Planck mass.
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \section{Theoretic Upper Bounds on the Tensor-Scalar Ratio}
-\addtodo{ Rewrite as reference to previous chapter keeping labels intact}
 \label{sec:theobound-multi}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -198,7 +197,7 @@ c_s P_{,X} \right)_* \,.
 % 
 
 
-\addtodo{ Change to reference chapter not paper.}
+\addtodo{ Change to reference chapter not paper. Change bound name?}
 Two of the authors (Lidsey \& Huston, LH) derived a complementary bound on the 
 tensor-scalar ratio by noting that during observable inflation
 the brane spans a fraction of the throat volume \cite{lidseyhuston}
@@ -245,7 +244,7 @@ the condition
 \left( \frac{h_*}{\Mpl} \right)^4 \,.
 \end{equation}
 % 
-\addtodo{ Change to cite chapter not paper}
+\addtodo{Should the above be removed if duplicate? Change to cite chapter not paper.}
 Finally substituting the constraint (\ref{eq:approxlyth-dbiintro}) 
 yields the upper limit \cite{lidseyhuston}
 % 
@@ -291,9 +290,9 @@ these bounds could be relaxed.
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % 
-
+\addtodo{Refer to dbi-intro}
 In the standard DBI scenario, the kinetic function defined in 
-Eq. (\ref{DBIaction-multi})  takes the form
+Eq. (\ref{eq:DBIaction-dbiintro2})  takes the form
 %  
 \begin{equation}
 \label{eq:DBIkinetic}
